[project]
name = "adversarial-attack-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "seymayucer", email = "seymayucer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
